<resources>
    <string name="app_name">MyFriends</string>
    <string name="makeCallText">Call</string>
    <string name="sendSmsText">Send SMS</string>
    <string name="sendEmailText">Send Email</string>
    <string name="openWebsiteText">Open URL</string>
    <string name="addFriend">Add Friend</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="ordering">Ordering</string>
    <string name="viewAs">View as</string>
</resources>
