<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:title="@string/ordering">
            <menu>
                <item
                    android:id="@+id/itOrderAscDesc"
                    android:title="Asc/Desc"/>
                <item
                    android:id="@+id/itOrderName"
                    android:title="@string/name"/>
                <item
                    android:id="@+id/itOrderLocation"
                    android:title="@string/location"/>
            </menu>
        </item>
    </group>
    <group>
        <item
            android:title="@string/viewAs">
            <menu>
                <item
                    android:id="@+id/itViewMap"
                    android:title="Map"/>
                <item
                    android:id="@+id/itViewList"
                    android:title="List"/>
            </menu>
        </item>
    </group>
    <group>
        <item
            android:id="@+id/itAddFriend"
            android:title="@string/addFriend"/>
    </group>
</menu>